--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Crimson's Library</h1>
     <ul>
-        <p><a href = "Nuclear Codes/index.html">Nuclear Codes</a></p>
+        <p><a href = "Nuclear Codes/index.html">Nuclear Codes (WIP)</a></p>
         <p><a href = "hangman but it's a website/index.html">Hangman</a></p>
         <p><a href = "Life/index.html">Life</a></p>
         <p><a href = "Minesweeper/index.html">Minesweeper</a></p>
