--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 </head>
 <body>
     <h1>Crimson's Library</h1>
+    <h2>HTML Games</h2>
     <ul>
         <p><a href = "Nuclear Codes/index.html">Nuclear Codes (WIP)</a></p>
         <p><a href = "hangman but it's a website/index.html">Hangman</a></p>
         <p><a href = "Life/index.html">Life</a></p>
         <p><a href = "Minesweeper/index.html">Minesweeper</a></p>
-    </ul> 
+    </ul>
+    <h2>
+        <p><a href = "Mechanics/kinematics.html">Kinematic Equations</a></p>
+        <p><a href = "Statistics/index.html">Statistics and Distributions</a></p>
+    </h2>
 </body>
 </html>
