--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <p><a href = "Life/index.html">Life</a></p>
         <p><a href = "Minesweeper/index.html">Minesweeper</a></p>
     </ul>
-    <h2>
+    <h2>Physics Tools</h2>
+    <ul>
         <p><a href = "Mechanics/kinematics.html">Kinematic Equations</a></p>
         <p><a href = "Statistics/index.html">Statistics and Distributions</a></p>
-    </h2>
+    </ul>
 </body>
 </html>
