--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Crimson09917's Library of HTML stuff</title>
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
