--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
         <p><a href = "Mechanics/kinematics.html">Kinematic Equations</a></p>
         <p><a href = "Statistics/index.html">Statistics and Distributions</a></p>
     </ul>
+    <h2>Python Games</h2>
+    <ul>
+        <p><a href = "https://github.com/Crimson09917/tron">Tron (pygame required)</a></p>
+        <p><a href = "https://github.com/Crimson09917/tetris">Tetris (pygame required)</a></p>
+        <p><a href = "https://github.com/Crimson09917/python_life">Life (pygame required)</a></p>
+        <p><a href = "https://github.com/Crimson09917/hangman">Hangman</a></p>
+        <p><a href = "https://github.com/Crimson09917/2048">2048 (pygame required)</a></p>
+    </ul>
 </body>
 </html>
