--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <ul>
         <p><a href = "Mechanics/kinematics.html">Kinematic Equations</a></p>
         <p><a href = "Statistics/index.html">Statistics and Distributions</a></p>
+        <p><a href = "Nuclear Interactions/index.html">Nuclear Interactions</a></p>
     </ul>
     <h2>Python Games</h2>
     <ul>
