--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p><a href = "hangman but it's a website/index.html">Hangman</a></p>
         <p><a href = "Life/index.html">Life</a></p>
         <p><a href = "Minesweeper/index.html">Minesweeper</a></p>
-        <p><a href = "Flagle/index.html">Minesweeper</a></p>
+        <p><a href = "Flagle/index.html">Flagle</a></p>
     </ul>
     <h2>Physics Tools</h2>
     <ul>
