--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 </head>
 <body>
     <h1>Crimson's Library</h1>
-    <h2>HTML Games</h2>
+    <h2>HTML and Sites</h2>
     <ul>
         <p><a href = "Nuclear Codes/index.html">Nuclear Codes (WIP)</a></p>
         <p><a href = "hangman but it's a website/index.html">Hangman</a></p>
         <p><a href = "Life/index.html">Life</a></p>
         <p><a href = "Minesweeper/index.html">Minesweeper</a></p>
         <p><a href = "Flagle/index.html">Flagle</a></p>
+        <p><a href = "Ambience/index.html">Ambience</a></p>
     </ul>
     <h2>Physics Tools</h2>
     <ul>
