--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p><a href = "Life/index.html">Life</a></p>
         <p><a href = "Minesweeper/index.html">Minesweeper</a></p>
         <p><a href = "Flagle/index.html">Flagle</a></p>
-        <p><a href = "Ambience/index.html">Ambience</a></p>
+        <p><a href = "Sounds/index.html">Ambience</a></p>
     </ul>
     <h2>Physics Tools</h2>
     <ul>
