--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p><a href = "Minesweeper/index.html">Minesweeper</a></p>
         <p><a href = "Flagle/index.html">Flagle</a></p>
         <p><a href = "Sounds/index.html">Ambience</a></p>
+        <p><a href = "dle/index.html">Take me to a random -le</a></p>
     </ul>
     <h2>Physics Tools</h2>
     <ul>
