--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p><a href = "Flagle/index.html">Flagle</a></p>
         <p><a href = "Sounds/index.html">Ambience</a></p>
         <p><a href = "dle/index.html">Take me to a random -le</a></p>
+        <p><a href = "QRCodeGenerator/index.html">QR Code Generator</a></p>
     </ul>
     <h2>Physics Tools</h2>
     <ul>
@@ -31,3 +32,4 @@
     </ul>
 </body>
 </html>
+
